AO3-6966 Fix heading levels and alignment for tag set nomination review and associations

--- a/public/stylesheets/site/2.0/11-group-listbox.css
+++ b/public/stylesheets/site/2.0/11-group-listbox.css
@@ -74,7 +74,7 @@ https://otwcode.github.io/docs/patterns/listbox.html
 }
 
 /* The height (1.286em) of the buttons plus their veritcal padding (0.25em * 2) plus the vertical padding (0.15em * 2) of the actions container (=2.086em), multiplied by 0.75 because the actions are only 75% of the heading's font size. Unfortunately, this doesn't account for the buttons' vertical borders (1px * 2). */
-.tagset .listbox > .heading:has(.actions) {
+.tagset .listbox > .heading:has(.actions), .tagset .listbox > .heading:has(~ .actions) {
   line-height: 1.5645;
 }
 
